force-app/main/default/objects/Debug_Log__c/fields/Case_Id__c.field-meta.xml
<CustomField>
    <fullName>Case_Id__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Case Id</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Debug Logs</relationshipLabel>
    <relationshipName>Debug_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>