force-app/main/default/objects/Debug_Log__c/fields/Data__c.field-meta.xml
<CustomField>
    <fullName>Data__c</fullName>
    <description>The relevant data at the time of the error</description>
    <label>Data</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>