force-app/main/default/objects/Debug_Log__c/fields/Message__c.field-meta.xml
<CustomField>
    <fullName>Message__c</fullName>
    <description>The error message.</description>
    <label>Message</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>