force-app/main/default/objects/Debug_Log__c/fields/Method__c.field-meta.xml
<CustomField>
    <fullName>Method__c</fullName>
    <description>Apex method name.</description>
    <label>Method</label>
    <length>40</length>
    <type>Text</type>
</CustomField>