force-app/main/default/objects/Debug_Log__c/fields/Stacktrace__c.field-meta.xml
<CustomField>
    <fullName>Stacktrace__c</fullName>
    <description>The exception stacktrace if available</description>
    <label>Stacktrace</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>