force-app/main/default/objects/Debug_Log__c/listViews/Callout.listView-meta.xml
<ListView>
    <fullName>Callout</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>Status__c</columns>
    <columns>Data__c</columns>
    <columns>Message__c</columns>
    <columns>Response_Body__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Type__c</field>
        <operation>equals</operation>
        <value>CalloutService.CalloutServiceException</value>
    </filters>
    <label>Callout Exceptions</label>
</ListView>