force-app/main/default/objects/Debug_Log__c/listViews/Click_Exceptions.listView-meta.xml
<ListView>
    <fullName>Click_Exceptions</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>Message__c</columns>
    <columns>Data__c</columns>
    <columns>Method__c</columns>
    <columns>Class__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Type__c</field>
        <operation>equals</operation>
        <value>ClickException</value>
    </filters>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>TODAY</value>
    </filters>
    <label>Click Exceptions</label>
    <sharedTo>
        <group>Service_Admin</group>
    </sharedTo>
</ListView>