force-app/main/default/objects/Debug_Log__c/listViews/Eaton_Logs.listView-meta.xml
<ListView>
    <fullName>Eaton_Logs</fullName>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Case_Id__c</columns>
    <columns>Response_Body__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>THIS_WEEK</value>
    </filters>
    <filters>
        <field>Type__c</field>
        <operation>notEqual</operation>
        <value>ClickException</value>
    </filters>
    <label>Eaton Logs</label>
    <sharedTo>
        <role>Administrator</role>
    </sharedTo>
</ListView>