force-app/main/default/objects/Debug_Log__c/listViews/MSTS.listView-meta.xml
<ListView>
    <fullName>MSTS</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>Status__c</columns>
    <columns>Data__c</columns>
    <columns>Message__c</columns>
    <columns>Response_Body__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>TODAY</value>
    </filters>
    <label>MSTS</label>
</ListView>